--- a/NullaGroupHome/NullaGroupHome/Properties/Resources.resx
+++ b/NullaGroupHome/NullaGroupHome/Properties/Resources.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BetterHUDTitle" xml:space="preserve">
+    <value> - BetterHUD，更直接地数据化显示。</value>
+    <comment>BetterHUD相关页的标题</comment>
+  </data>
   <data name="KeyCraftTitle" xml:space="preserve">
     <value> - KeyCraft，和Key社的深度交流</value>
     <comment>KeyCraft相关页的标题</comment>
